# notion_ical

./: Cargo.toml  README.md
src/: calendar.rs  event.rs  lib.rs
