[package]
name = "notion-ical"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
ical = { version = "0.8.0", features = ["generator"] }
notion = { git = "https://github.com/trobanga/notion.git", branch = "reqwest"  }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.37"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.33.0", features = ["full"] }
wiremock = "0.5.21"
